services/ingress/svc-nodeport.yaml

apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport
spec:
  type: NodePort
  selector: 
    app: my-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
    # This is not mandatory, the control plane will automatically assign
    # a port for you if you omit this
    nodePort: 30080
